--- a/css.html
+++ b/css.html
@@ -28,7 +28,15 @@
 
     <div class="card">Card</div>
 
-    
+    <!-- 4.question -->
+
+    <nav>
+        <a href="#">One</a>
+        <a href="#a">Two</a>
+        <a href="#b">Three</a>
+    </nav>
+
+   
 
 </body>
 </html>
