--- a/css.html
+++ b/css.html
@@ -36,7 +36,16 @@
         <a href="#b">Three</a>
     </nav>
 
-   
+    <!-- 5.question -->
+     <div class="gallery">
+        <img src="./gallery/images.jpeg" alt="">
+        <img src="./gallery/images.jpeg" alt="">
+        <img src="./gallery/images.jpeg" alt="">
+        <img src="./gallery/images.jpeg" alt="">
+     </div>
+
+
+     
 
 </body>
 </html>
