--- a/css.html
+++ b/css.html
@@ -48,7 +48,9 @@
      <!-- 6.question -->
       <button id="but1">Button</button>
 
-    
+      <!-- 7.question -->
+
+      <button id="but2">Hover Me</button>
 
 
 
